--- a/Client/src/app/cart/cart.component.html
+++ b/Client/src/app/cart/cart.component.html
@@ -24,134 +24,50 @@
               </div>
 
               <div class="line"></div>
-
-              <div class="cart-product-container">
+              <h1 *ngIf="!data || data.length == 0" class="text-center text-[30px]">Không có sản
+                phẩm nào trong giỏ hàng</h1>
+              <div class="cart-product-container" *ngFor="let item of data">
                   <div class="cart-product">
                       <!-- chekbox -->
                       <div><input type="checkbox" name="pr1" id="pr1" checked></div>
                       <!-- Tên sản phẩm -->
                       <div class="cart-info">
                           <div>
-                              <img src="../assets/img/ẢNH SẢN PHẨM/25.png" style="border-radius: 50%" width="100%">
+                              <img [src]="item.Img[0]" style="border-radius: 50%" width="100%">
                           </div>
                           <div class="product-description">
-                              <b>Donut Chocolate</b>
+                              <b>{{item.Name}}</b>
                           </div>
                       </div>
                       <!-- Giá sản phẩm -->
                       <div class="price-info">
-                          <div class="price">30000</div>
+                          <div class="price">{{item.Variant[0].PromotionPrice}}</div>
                           <div class="currency">
                               VNĐ
                           </div>
                       </div>
                       <!-- Số lượng -->
                       <div class="quantity-box">
-                        <button class="quantity-decrease" id="decrease" (click)="decreaseValue()">-</button>
-                        <input type="number" [value]="value" (input)="onChange(this.value)" #quantityInput>
-                        <button class="quantity-increase" id="increase" (click)="increaseValue()" >+</button>
+                        <input max="100" min="1" maxlength="2" minlength="1" class="w-[50px] pl-2 border-[1px] border-solid border-black outline-none"
+                          type="number" (blur)="updateQty(item)" [(ngModel)]="item.qty">
                     </div>
 
                       <!-- Thành tiền -->
                       <div class="price-info">
-                          <div class="price">60000</div>
+                          <div class="lineTotal">{{item.Variant[0].PromotionPrice * item.qty}}</div>
                           <div class="currency">
                               VNĐ
                           </div>
                       </div>
 
                       <!-- Button xoá -->
-                      <div>
+                      <div (click)="removeItem(item)">
                           <img src="../assets/img/trash.png" style="width: 25px">
                       </div>
                   </div>
 
-                  <div class="cart-product">
-                      <!-- chekbox -->
-                      <div><input type="checkbox" name="pr1" id="pr1" checked></div>
-                      <!-- Tên sản phẩm -->
-                      <div class="cart-info">
-                          <div>
-                              <img style="border-radius:50%" src="../assets/img/ẢNH SẢN PHẨM/13.png" width="100%">
-                          </div>
-                          <div class="product-description">
-                              <b>Flourless Chocolate Cupcake</b>
-                          </div>
-                      </div>
-                      <!-- Giá sản phẩm -->
-                      <div class="price-info">
-                          <div class="price">
-                              45.000
-                          </div>
-                          <div class="currency">
-                              VNĐ
-                          </div>
-                      </div>
-                      <!-- Số lượng -->
-                      <div class="quantity-box">
-                        <button class="quantity-decrease" id="decrease" (click)="decreaseValue()">-</button>
-                        <input type="text" [value]="value" (input)="onChange(this.value)" #quantityInput>
-                        <button class="quantity-increase" id="increase" (click)="increaseValue()" >+</button>
-                    </div>
 
-                      <!-- Thành tiền -->
-                      <div class="price-info">
-                          <div class="price">
-                              45.000
-                          </div>
-                          <div class="currency">
-                              VNĐ
-                          </div>
-                      </div>
 
-                      <!-- Button xoá -->
-                      <div>
-                          <img src="../assets/img/trash.png" style="width: 25px">
-                      </div>
-                  </div>
-
-                  <div class="cart-product">
-                      <!-- chekbox -->
-                      <div><input type="checkbox" name="pr1" id="pr1" checked></div>
-                      <!-- Tên sản phẩm -->
-                      <div class="cart-info">
-                          <div>
-                              <img src="../assets/img/ẢNH SẢN PHẨM/81.png" style="border-radius: 50%" width="100%">
-                          </div>
-                          <div class="product-description">
-                              <b>Bánh Kem Romantic</b>
-                          </div>
-                      </div>
-                      <!-- Giá sản phẩm -->
-                      <div class="price-info">
-                          <div class="price">
-                              320.000
-                          </div>
-                          <div class="currency">
-                              VNĐ
-                          </div>
-                      </div>
-                      <!-- Số lượng -->
-                      <div class="quantity-box">
-                        <button class="quantity-decrease" id="decrease" (click)="decreaseValue()">-</button>
-                        <input type="text" [value]="value" (input)="onChange(this.value)" #quantityInput>
-                        <button class="quantity-increase" id="increase" (click)="increaseValue()" >+</button>
-                    </div>
-
-                      <!-- Thành tiền -->
-                      <div class="price-info">
-                          <div class="price">
-                              320.000
-                          </div>
-                          <div class="currency">
-                              VNĐ
-                          </div>
-                      </div>
-
-                      <!-- Button xoá -->
-                      <div>
-                          <img src="../assets/img/trash.png" style="width: 25px">
-                      </div>
                   </div>
               </div>
           </div>
@@ -183,7 +99,7 @@
                         <div class="col-7 left-title">Tổng số tiền (tạm tính)</div>
                         <div class="col-5 right-title">
                           <div class="row">
-                            <div class="col-12" style="font-weight:bold;">425.000 VNĐ</div>
+                            <div class="col-12" style="font-weight:bold;">{{ calculateTotalPrice() }} VNĐ</div>
                             <!-- <div class="col-4 left-title">VNĐ</div> -->
                           </div>
                         </div>
@@ -193,7 +109,7 @@
                           <div class="col-7 left-title">Giảm giá</div>
                           <div class="col-5 right-title">
                             <div class="row">
-                              <div class="col-12" style="font-weight:bold">-20.000 VNĐ</div>
+                              <div class="col-12" style="font-weight:bold"> VNĐ</div>
                               <!-- <div class="col-4 left-title">VNĐ</div> -->
                               </div>
                           </div>
@@ -203,7 +119,7 @@
                           <div class="col-7 left-title">Thành tiền</div>
                           <div class="col-5 right-title">
                             <div class="row">
-                              <div class="col-12 total1" >405.000 VNĐ</div>
+                              <div class="col-12 total1" >{{ calculateTotalPrice() }} VNĐ</div>
                               <!-- <div class="col-4">VNĐ</div> -->
                             </div>
                         </div>
@@ -242,4 +158,3 @@
           </div>
       </div>
   </div>
-</div>
