--- a/Client/src/app/header/header.component.html
+++ b/Client/src/app/header/header.component.html
@@ -41,7 +41,7 @@
               </ul>
           </div>
           <div class="cart">
-              <a href="./cart">
+              <a href="./getcart">
                   <i class="fa-solid fa-cart-shopping"></i>
                   <span>Giỏ hàng</span></a>
           </div>
