--- a/Client/src/app/product-detail/product-detail.component.html
+++ b/Client/src/app/product-detail/product-detail.component.html
@@ -43,8 +43,8 @@
                     <!-- Đánh sao -->
                     <div class="row" style="text-align: left;">
                         <div><span class="star star2"> <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
-                            <span>530</span>               
-                        </div> 
+                            <span>530</span>
+                        </div>
                     </div>
                     <div class="row">
                         <p class="price left">
@@ -56,7 +56,7 @@
                         <div class="col-12 left sub_title">
                             Mô tả sản phẩm
                         </div>
-                    </div>  
+                    </div>
                     <div class="row">
                         <div class="col-12 left description">{{product.Description}}</div>
                     </div>
@@ -73,35 +73,17 @@
                     <div class="row">
                         <div class="col">
                             <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary input" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <button type="button" class="btn btn-primary input" (click)="addToCart(product)" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 Thêm vào giỏ hàng
                             </button>
 
                             <!-- Modal -->
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Thành công</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            Bạn đã thêm vào giỏ hàng thành công!
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-primary input" data-bs-dismiss="modal" style="background-color: gray;">Đóng</button>
-                                            <a href="./cart">
-                                                <button type="button" class="btn btn-primary input">Đi đến giỏ hàng</button>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
 
                         <div class="col">
-                            <a href="./cart">
-                                <button type="button" class="btn btn-primary input">Mua ngay</button>                                                    
+                            <a href="./getcart">
+                                <button type="button" class="btn btn-primary input" (click)="addToCart(product)">Mua ngay</button>
                             </a>
                         </div>
                     </div>
