--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -13,20 +13,20 @@
               <h3 class="title text-center mt-4">
                 Đăng ký tài khoản
               </h3>
-              <form class="form-box ">
+              <form class="form-box "  >
                 <div class="form-input">
                   <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                     <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                   </svg></span>
-                  <input type="text" name="" placeholder="Tên đăng nhập" required>
+                  <input type="text"  #name="ngModel" name="username" [(ngModel)]="user.UserName" placeholder="Tên đăng nhập" required>
                 </div>
                 <div class="form-input">
                   <span><i class="fa fa-envelope-o"></i></span>
-                  <input type="text" name="" placeholder="Email hoặc số điện thoại" required>
+                  <input type="text" #name="ngModel" name="Phone" [(ngModel)]="user.Phone" placeholder="Nhập số điện thoại" required pattern="[0-9]{10}">
                 </div>
                 <div class="form-input">
                   <span><i class="fa fa-key"></i></span>
-                  <input type="password" id="password" name="password" [(ngModel)]="model.password" minlength="6" required #password="ngModel"
+                  <input type="password" id="password"  name="password" [(ngModel)]="user.Password" minlength="6" required #password="ngModel"
                   class="form-control" placeholder="Nhập mật khẩu" [class.is-valid]="password.invalid && password.touched">
                 </div>
                 <div>
@@ -41,23 +41,18 @@
                   <span><i class="fa fa-key"></i></span>
                   <input type="password" name="" placeholder="Nhập lại mật khẩu" id="repassword" required>
                 </div>
+
                 <div class="mb-3">
                   <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="cb1" name="" required>
                     <label class="custom-control-label" for="cb1" aria-required="true" style="font-family: 'Inter', sans-serif ; color: #E75C6B;">Tôi đồng ý với các điều khoản của Memory</label>
                   </div>
                 </div>
-
                 <div class="mb-3">
-                  <a href="./main.html" class="register">
+                  <a style="cursor: pointer;" (click)="postUser()" class="register">
                     Đăng ký
                   </a>
                 </div>
-
-
-
-
-
                 <hr class="my-4">
 
                 <div class="text-center mb-2" style="font-family: 'Inter', sans-serif ;">
