--- a/Admin/src/app/customer-management/customer-management.component.css
+++ b/Admin/src/app/customer-management/customer-management.component.css
@@ -51,10 +51,11 @@ h4 {
 .search-box input[type="text"] {
   width: 100%;
   padding: 10px 20px;
+  font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 20px;
   outline: none;
-  font-size: 16px;
+
 }
 
 .search-box button[type="submit"] {
@@ -106,7 +107,7 @@ th, td {
 }
 
 th {
-  background-color: #f2f2f2;
+  background-color: #fefae0;
   font-weight: bold;
 }
 
@@ -124,6 +125,10 @@ td span img {
 td button {
   background: none;
   border: none;
+}
+pagination-controls {
+  padding: 15px;
+  margin: auto;
 }
 .fa-detail {
   display: inline-block;
@@ -144,4 +149,303 @@ td button {
   background-position: center;
   background-size: contain;
   font-size: 0;
+}
+.customer-detail {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  width: 70%;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+hr {
+  margin: 0;
+  margin-bottom: 10px;
+}
+.customer-detail .title {
+  background-color: pink;
+  color: #e75c6b;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 4px;
+  padding: 10px;
+  font-size: 25px;
+}
+.sub_title {
+  color: #e75c6b;
+  padding: 10px 10px 0 10px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+thead {
+  background-color: #fefae0;
+
+}
+.customer_detail table,th,td {
+  text-align: center;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.status {
+  background-color: pink;
+  border-radius: 10px;
+  height: auto;
+  padding: 5px;
+}
+button.close-btn {
+  background-color: #F38A95;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+button.close-btn:hover {
+  background-color: #81C6E8;
+}
+.form-group {
+  margin-bottom: 1rem;
+}
+
+.col-form-label {
+  text-align: left;
+}
+
+.form-control-plaintext {
+  background-color: #f7f7f7;
+  border: none;
+  border-radius: 0.25rem;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+}
+
+.form-check-label {
+  padding-left: 0;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.col-md-6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.col-sm-4 {
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.text-center img{
+  width: 200px;
+  border-radius: 40%!important;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+/* .filter-search-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.filter-container {
+  display: flex;
+  align-items: center;
+}
+
+.filter-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 6px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.filter-options-container {
+  margin-left: 10px;
+}
+
+.filter-options {
+  padding: 6px 12px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+}
+
+.search-container {
+  margin-left: 10px;
+}
+
+.search-input {
+  padding: 6px 12px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  width: 100%;
+  max-width: 300px;
+}
+.search-container {
+  display: flex;
+}
+
+.search-input {
+  flex: 6;
+}
+
+.filter-options-toggle {
+  flex: 4;
+}
+
+.filter-options-container {
+  display: none;
+}
+.filter-search-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.filter-container {
+  display: flex;
+  align-items: center;
+  width: 40%;
+}
+
+.filter-button {
+  margin-right: 10px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #008CBA;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.filter-options-container {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  flex-direction: column;
+}
+
+.filter-options {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+}
+
+.search-container {
+  width: 60%;
+}
+
+.search-input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+}
+.filter-container {
+  position: relative;
+}
+
+.filter-options-container {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+} */
+.filter-search-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.filter-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex: 0 0 auto;
+}
+.filter-button {
+  margin-right: 10px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #008CBA;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 10px 40px 10px 40px;
+}
+.filter-options-container {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 122%;
+  z-index: 9999;
+
+}
+.filter-options-container p {
+  margin-bottom: 5px;
+}
+
+.filter-options {
+  padding: 6px 12px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+}
+.search-container {
+  flex: 1;
+  position: relative;
+}
+
+.search-input {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  outline: none;
+  font-size: 16px;
+  padding: 10px 40px 10px 40px;
+}
+.search-icon {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #f38a95;
 }
