--- a/Admin/src/app/header/header.component.html
+++ b/Admin/src/app/header/header.component.html
@@ -41,7 +41,7 @@
           </a>
       </li>
       <li>
-          <a href="">
+          <a href="./customer">
               <span class="icon"><i  class="fas fa-user"></i></span>
               <span class="item">Khách hàng</span>
           </a>
